frontend/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Josefin Sans", sans-serif;
  font-family: "Manrope", sans-serif;

  font-family: "Overpass", sans-serif;
  font-family: "Poppins", sans-serif;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  background-color: #fff6e6 !important;
  height: 120vh;
  background-color: #fef4ea;
}

.app {
  max-width: 1024px;
}

/* Universal Classes */

.text-white {
  color: white;
}

.text-bold {
  font-weight: 900;
}

.cursor-pointer {
  cursor: pointer;
}

/* TextSection Component Styling */

.text-container {
  text-align: center;
}

.paragraph {
  margin-top: 20px;
}

/* FormSection Component Styling */

.both-sections {
  display: flex;
}

.section-container {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form-container {
  width: 100%;
  max-width: 600px;
  /* Set a maximum width for the form */
  overflow: auto;
  /* Hide overflow content */
  padding: 20px;
  box-sizing: border-box;
}

.form-container input {
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid lightgray;
  border-radius: 5px;
  outline: none;
}

.error {
  color: red;
  text-align: right;
  margin-top: -10px;
}

.terms-text {
  margin-top: 10px;
  font-size: 10px;
  color: gray;
  text-align: center;
  line-height: 2em;
}

.terms-link {
  text-decoration: none;
  color: hsl(0, 100%, 60%);
}

/* Media Queries */

@media only screen and (min-width: 1024px) {
  .app {
    display: flex;
    align-items: center;
  }

  .text-container {
    text-align: left;
    flex-basis: 100%;
    margin-right: 20px;
  }

  .heading {
    font-size: 2.5rem;
    line-height: 1.1em;
  }

  .paragraph {
    font-size: 1rem;
  }

  .section-container {
    margin-top: 0;
    flex-basis: 100%;
  }

  .form-container {
    padding: 30px;
  }

  .form-container input {
    margin-bottom: 15px;
  }
}

Menu {
  padding-bottom: 15px;
}

*/

/* Reset CSS */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font-family: "Josefin Sans", sans-serif;
  font-family: "Manrope", sans-serif;
  font-family: "Overpass", sans-serif;
  font-family: "Poppins", sans-serif;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  height: 120vh;
  background-color: "white";
}

.app {
  max-width: 1024px;
}

/* Universal Classes */
.text-white {
  color: white;
}

.text-bold {
  font-weight: 900;
}

.cursor-pointer {
  cursor: pointer;
}

/* Add Itinerary Form Styling */
.form-container {
  background-color: white;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  width: 100%;
  max-width: 600px;
  margin: auto;
}

.form-container input {
  width: 100%;
  padding: 10px;
  margin-bottom: 15px;
  border: 1px solid lightgray;
  border-radius: 5px;
  outline: none;
  transition: border 0.3s ease;
}

.form-container input:focus {
  border: 1px solid hsl(154, 59%, 51%);
}

button[type="submit"] {
  background-color: hsl(154, 59%, 51%);
  color: white;
  padding: 15px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  width: 100%;
  font-size: 1rem;
  transition: background-color 0.3s ease;
}

button[type="submit"]:hover {
  background-color: hsl(154, 59%, 40%);
}

/* Form Section Styling */
.section-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.terms-text {
  margin-top: 10px;
  font-size: 12px;
  color: gray;
  text-align: center;
  line-height: 2em;
}

.terms-link {
  text-decoration: none;
  color: hsl(0, 100%, 60%);
}

/* Media Queries */
@media only screen and (min-width: 1024px) {
  .app {
    display: flex;
    align-items: center;
  }

  .form-container {
    padding: 30px;
  }

  .form-container input {
    margin-bottom: 20px;
  }
}

/* Foudas Styling */
#isOpenDiv:hover {
  border-color: black !important;
}

.product-card:hover {
  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5) !important;
}

.activity-card:hover {
  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5) !important;
}

.itinerary-card:hover {
  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.5) !important;
}

::-webkit-file-upload-button {
  display: none;
}

@import url("https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

.duckTitle {
  font-family: "Playwrite HR Lijeva", cursive !important;
  /* font-size: 40px; */
  /* font-weight: 700; */
  font-style: normal;
}

.blackhover:hover {
  background-color: #ffeccc !important;
  color: #ff9933;
}

.oswald-Titles {
  font-family: "Barlow", sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 90px;
}

searchInput:focus {
  color: #ff9933 !important;
}

@tailwind base;
@tailwind components;
@tailwind utilities;
@import "flowbite";

